Use correct color for menu divider line in dark mode

--- a/less/header.less
+++ b/less/header.less
@@ -99,6 +99,10 @@
 	background-repeat: repeat no-repeat;
 	background-size: contain;
 
+	@media (prefers-color-scheme: dark) {
+		background-image: url('./img/wave-dark-mode.svg');
+	}
+
 	@media (min-width: @breakpoint-desktop) {
 		display: none;
 	}
